--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Typescript try</title>
 </head>
 <body>
-  <script src="second.js"></script>
+  <script src="dist/first.js"></script>
 </body>
 </html>
